update title screen graphics

--- a/docs/README
+++ b/docs/README
@@ -55,6 +55,11 @@ Credits
 - YM playback: Zerkman
 - Original PCM mixer: Masteries
 
+Thanks
+------
+
+- Ataricrypt/Steve
+
 Random technical buzzwords :)
 -----------------------------
 
