pre release updates

--- a/docs/README
+++ b/docs/README
@@ -60,7 +60,10 @@ Credits
 Thanks
 ------
 
-- Ataricrypt/Steve
+- Steve Gregory (Atari Crypt)
+- Łukasz Jokiel
+- Maarten Martens (Atari Legend)
+- Keith Clark
 - The clever people on Atari-Forum - Anima, DML, Cyprian etc...
 - All the commenters and likers on YouTube and Twitter for the feedback and
   encouragement :)
